syntax = "proto3";
package imageProto;
option go_package = "github.com/GetterSethya/imageProto";

message ImageResp{
    string filename = 3;
}

message CreateImageReq {
    bytes imageFile = 1;
    string fileName = 2;
}

service User {
    rpc CreateImage(CreateImageReq) returns (ImageResp){}
}
